# BeanDip

./: BeanDip.sln  CMakeLists.txt  Frito.py  testing.txt
BeanDip/: BeanDip.vcxproj  BeanDip.vcxproj.filters  common.cpp  common.h  connection.cpp  connection.h  dir.cpp  dir.h  get.cpp  get.h  main.cpp  put.cpp  put.h
src/: client.c  client.h  common.h  main.c  socket.c  socket.h  thread.c  thread.h
